--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteParticipacionClases/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteParticipacionClases/index.xhtml
@@ -47,7 +47,7 @@
                         #{car.participacion}
                     </p:column>
                     <f:facet name="footer">
-                        Promedio Total de Participacion de Clases #{rptParticipacionController.totalTransacciones}
+                        Total de Registros #{rptParticipacionController.totalTransacciones}
                     </f:facet>
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
