--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpRendimiento.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpRendimiento.jrxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
-<!-- 2015-11-24T20:26:59 -->
+<!-- Created with Jaspersoft Studio version 6.1.1.final using JasperReports Library version 6.1.1  -->
+<!-- 2016-01-03T16:02:00 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptAlumnos" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="075ed306-8898-40c6-b065-aa7be29049d9">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="bd_sieni"/>
 	<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
+	<property name="com.jaspersoft.studio.unit." value="pixel"/>
 	<parameter name="fechaGeneracion" class="java.lang.String"/>
 	<parameter name="hasta" class="java.lang.String"/>
 	<parameter name="desde" class="java.lang.String"/>
@@ -24,93 +25,92 @@
 	<field name="aprobados" class="java.lang.String"/>
 	<field name="reprobados" class="java.lang.String"/>
 	<field name="promedio" class="java.lang.String"/>
+	<field name="evaluacion" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<pageHeader>
-		<band height="80">
+		<band height="114">
 			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
-			<textField isBlankWhenNull="true">
-				<reportElement x="151" y="49" width="100" height="20" uuid="d108bdcd-fe91-4302-a088-bf3fda57b653"/>
-				<textFieldExpression><![CDATA[$P{desde}]]></textFieldExpression>
-			</textField>
 			<staticText>
-				<reportElement x="263" y="49" width="34" height="20" uuid="e5d279f2-6e18-4e6c-8118-05416760ef3f"/>
-				<text><![CDATA[Hasta:]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="215" y="11" width="205" height="14" uuid="b79a3114-94b7-4203-9a10-9c1efd94e65e"/>
+				<reportElement x="178" y="12" width="205" height="28" uuid="b79a3114-94b7-4203-9a10-9c1efd94e65e"/>
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Reporte de Rendimiento de Alumnos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="215" y="-1" width="205" height="19" uuid="6380fbb6-acf1-4bc4-9e77-3c16f32331f2"/>
+				<reportElement x="178" y="0" width="205" height="19" uuid="6380fbb6-acf1-4bc4-9e77-3c16f32331f2"/>
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Centro Escolar San Ramón]]></text>
 			</staticText>
-			<textField isBlankWhenNull="true">
-				<reportElement x="297" y="50" width="100" height="20" uuid="d81dd0e1-a4d1-4ab8-8aca-47d446cc3555"/>
-				<textFieldExpression><![CDATA[$P{hasta}]]></textFieldExpression>
-			</textField>
 			<image>
 				<reportElement x="6" y="3" width="105" height="46" uuid="efe7bbf6-afb3-4970-a868-fac4475e6689"/>
 				<imageExpression><![CDATA["../images/mined.jpg"]]></imageExpression>
 			</image>
-			<staticText>
-				<reportElement x="111" y="49" width="40" height="20" uuid="8505d060-dbc4-422d-afcc-1c25c03e8c8c"/>
-				<text><![CDATA[Desde:]]></text>
-			</staticText>
 			<textField>
-				<reportElement x="399" y="9" width="136" height="30" uuid="0ac0e42c-7f30-4a63-b4e3-c84249c6488c"/>
+				<reportElement x="391" y="9" width="136" height="30" uuid="0ac0e42c-7f30-4a63-b4e3-c84249c6488c"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["Pág "+$V{PAGE_NUMBER}+" de "]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="539" y="9" width="32" height="30" uuid="24fba728-7f62-428c-8cef-9d73e6d79c0b"/>
+				<reportElement x="531" y="9" width="32" height="30" uuid="24fba728-7f62-428c-8cef-9d73e6d79c0b"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="395" y="52" width="164" height="20" uuid="c02fc0fc-5d00-4827-a6e9-562c7aa0e0e4"/>
+				<reportElement x="387" y="52" width="164" height="20" uuid="c02fc0fc-5d00-4827-a6e9-562c7aa0e0e4"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["F. Generación:"+ $P{fechaGeneracion}]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement x="216" y="93" width="100" height="21" uuid="81d890e9-9ae0-4560-a7e6-1ed5303aad77"/>
+				<textFieldExpression><![CDATA[$P{seccion}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="170" y="93" width="46" height="20" uuid="916273e3-487f-4f81-9250-36c02b5876fd"/>
+				<text><![CDATA[Sección:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="70" y="93" width="100" height="20" uuid="6f435dc9-c4ce-4785-ba5d-2e09bec77223"/>
+				<textFieldExpression><![CDATA[$P{grado}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="24" y="93" width="46" height="20" uuid="f83c2c77-0974-48c2-955e-1292e63fa6c0"/>
+				<text><![CDATA[Grado:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="216" y="72" width="100" height="20" uuid="bdc6bfa1-4881-45fe-8494-40e86bec99d2"/>
+				<textFieldExpression><![CDATA[$P{hasta}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="170" y="72" width="46" height="20" uuid="a4178e24-e490-4157-9493-cbf9549329cd"/>
+				<text><![CDATA[Hasta:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="70" y="72" width="100" height="20" uuid="258ba614-3eab-4659-89a6-d7a2df3f69e6"/>
+				<textFieldExpression><![CDATA[$P{desde}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="24" y="72" width="46" height="20" uuid="4c197880-4d21-45ef-822e-cdb044328807"/>
+				<text><![CDATA[Desde:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="70" y="52" width="246" height="20" uuid="35c776cd-3904-4504-a464-252db386c701"/>
+				<textFieldExpression><![CDATA[$P{materia}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="24" y="52" width="46" height="20" uuid="11da1164-c363-4031-87df-0b45410f0651"/>
+				<text><![CDATA[Materia:]]></text>
+			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="40" splitType="Stretch">
+		<band height="45" splitType="Stretch">
 			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 			<staticText>
-				<reportElement x="12" y="10" width="60" height="30" uuid="530bda54-0aca-4464-a702-6f7435a107c2"/>
-				<box padding="1">
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[Grado]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="72" y="10" width="80" height="30" uuid="2d5f1b4b-bf3a-40e6-8413-63426e21580b"/>
-				<box padding="1">
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[Seccion]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="152" y="10" width="80" height="30" uuid="1069d5f3-cdc2-4f9c-950e-1de74d6d9623"/>
+				<reportElement x="3" y="10" width="80" height="30" uuid="1069d5f3-cdc2-4f9c-950e-1de74d6d9623"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -123,7 +123,7 @@
 				<text><![CDATA[Materia]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="232" y="10" width="80" height="30" uuid="f2207e9a-4870-47af-bfeb-f5ce1e4c4939"/>
+				<reportElement x="83" y="10" width="80" height="30" uuid="f2207e9a-4870-47af-bfeb-f5ce1e4c4939"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -136,7 +136,7 @@
 				<text><![CDATA[Alumnos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="312" y="10" width="80" height="30" uuid="d6778a95-b1fe-4a1d-a65a-b0e6d799b2c7"/>
+				<reportElement x="285" y="10" width="80" height="30" uuid="d6778a95-b1fe-4a1d-a65a-b0e6d799b2c7"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -149,7 +149,7 @@
 				<text><![CDATA[Tipo de Evaluacion]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="392" y="10" width="55" height="30" uuid="ddeef255-87fa-48ec-9517-12f0a0c74c3c"/>
+				<reportElement x="365" y="10" width="68" height="30" uuid="ddeef255-87fa-48ec-9517-12f0a0c74c3c"/>
 				<box>
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -162,7 +162,7 @@
 				<text><![CDATA[Aprobados]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="447" y="10" width="63" height="30" uuid="ddfe7779-4d77-42ce-9fcd-761b7d518e51"/>
+				<reportElement x="433" y="10" width="73" height="30" uuid="ddfe7779-4d77-42ce-9fcd-761b7d518e51"/>
 				<box>
 					<topPen lineWidth="1.0"/>
 					<leftPen lineWidth="1.0"/>
@@ -175,7 +175,7 @@
 				<text><![CDATA[Reprobados]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="510" y="10" width="50" height="30" uuid="7110725c-f986-4ea0-b8c6-3c68379f5714"/>
+				<reportElement x="506" y="10" width="61" height="30" uuid="7110725c-f986-4ea0-b8c6-3c68379f5714"/>
 				<box>
 					<topPen lineWidth="1.0"/>
 					<leftPen lineWidth="1.0"/>
@@ -187,13 +187,26 @@
 				</textElement>
 				<text><![CDATA[Promedio]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="163" y="10" width="122" height="30" uuid="d0f5b810-6af9-424c-86d2-693eb17eb0e8"/>
+				<box padding="1">
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Evaluacion]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="28" splitType="Stretch">
+		<band height="39" splitType="Stretch">
 			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 			<textField isBlankWhenNull="true">
-				<reportElement x="152" y="0" width="80" height="28" uuid="2e5b58ec-11ed-4769-a89c-1db7b8553d42">
+				<reportElement x="3" y="0" width="80" height="28" uuid="2e5b58ec-11ed-4769-a89c-1db7b8553d42">
 					<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
 				</reportElement>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
@@ -206,7 +219,7 @@
 				<textFieldExpression><![CDATA[$F{materia}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="232" y="0" width="80" height="28" uuid="2005aca6-dfaa-44ca-bb41-e909c8b78818">
+				<reportElement x="83" y="0" width="80" height="28" uuid="2005aca6-dfaa-44ca-bb41-e909c8b78818">
 					<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
 				</reportElement>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
@@ -219,7 +232,7 @@
 				<textFieldExpression><![CDATA[$F{alumnos}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="312" y="0" width="80" height="28" uuid="595e14ef-9c02-4b87-8cb0-be2dded3ff6c">
+				<reportElement x="285" y="0" width="80" height="28" uuid="595e14ef-9c02-4b87-8cb0-be2dded3ff6c">
 					<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
 				</reportElement>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
@@ -232,30 +245,7 @@
 				<textFieldExpression><![CDATA[$F{tipoEvaluacion}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement positionType="Float" x="12" y="0" width="60" height="28" uuid="86df671e-2b3c-481f-81a3-19cc7bdae722">
-					<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
-				</reportElement>
-				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textFieldExpression><![CDATA[$F{grado}]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement x="72" y="0" width="80" height="28" uuid="41ec8b5b-0a04-4bc0-8357-049423460f7d"/>
-				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textElement textAlignment="Center"/>
-				<textFieldExpression><![CDATA[$F{seccion}]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement x="392" y="0" width="55" height="28" uuid="2d95534e-7311-411e-8d3e-0df42e1a52ca"/>
+				<reportElement x="365" y="0" width="68" height="28" uuid="2d95534e-7311-411e-8d3e-0df42e1a52ca"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -266,7 +256,7 @@
 				<textFieldExpression><![CDATA[$F{aprobados}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="447" y="0" width="63" height="28" uuid="8f543219-3786-47a9-ae58-3a6e4622f14a"/>
+				<reportElement x="433" y="0" width="73" height="28" uuid="8f543219-3786-47a9-ae58-3a6e4622f14a"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -277,7 +267,7 @@
 				<textFieldExpression><![CDATA[$F{reprobados}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="510" y="0" width="50" height="28" uuid="d7ae8dea-a6ac-4be4-aa94-b7c66f93e914"/>
+				<reportElement x="506" y="0" width="61" height="28" uuid="d7ae8dea-a6ac-4be4-aa94-b7c66f93e914"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -287,20 +277,33 @@
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{promedio}]]></textFieldExpression>
 			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="163" y="0" width="122" height="28" uuid="bb97a000-6be4-4c26-bc5f-e3efa788cfb3">
+					<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
+				</reportElement>
+				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$F{evaluacion}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<summary>
 		<band height="50">
 			<staticText>
-				<reportElement x="60" y="13" width="90" height="20" uuid="b94b28dd-dd7d-49cb-ad83-96eb93e8c053"/>
+				<reportElement x="60" y="13" width="100" height="20" uuid="b94b28dd-dd7d-49cb-ad83-96eb93e8c053"/>
 				<text><![CDATA[Total de Registros:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="154" y="13" width="100" height="20" uuid="3e089dda-3c39-40af-bf73-b822f8c0c473"/>
+				<reportElement x="156" y="13" width="100" height="20" uuid="3e089dda-3c39-40af-bf73-b822f8c0c473"/>
 				<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="15" y="0" width="543" height="30" uuid="861bdd45-9483-49cb-bc42-519b11f227d8"/>
+				<reportElement x="15" y="0" width="548" height="30" uuid="861bdd45-9483-49cb-bc42-519b11f227d8"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
