--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpAvance.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpAvance.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.1.1.final using JasperReports Library version 6.1.1  -->
-<!-- 2016-01-03T16:49:54 -->
+<!-- 2016-01-03T21:48:55 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptAvance" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="075ed306-8898-40c6-b065-aa7be29049d9">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="bd_sieni"/>
 	<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
@@ -25,7 +25,7 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="107" splitType="Stretch">
+		<band height="85" splitType="Stretch">
 			<image>
 				<reportElement x="22" y="-1" width="105" height="46" uuid="efe7bbf6-afb3-4970-a868-fac4475e6689"/>
 				<imageExpression><![CDATA["../images/mined.jpg"]]></imageExpression>
@@ -60,44 +60,33 @@ Reporte de Avance de Alumno]]></text>
 				<textFieldExpression><![CDATA[$P{alumno}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="213" y="87" width="50" height="20" uuid="a71b1ec7-6e6f-49d3-a05e-0577a97a637a"/>
+				<reportElement x="213" y="65" width="50" height="20" uuid="a71b1ec7-6e6f-49d3-a05e-0577a97a637a"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Seccion:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="263" y="87" width="106" height="20" uuid="47a0bcc4-d53f-4541-9369-7e28981c7b26"/>
+				<reportElement x="263" y="65" width="106" height="20" uuid="47a0bcc4-d53f-4541-9369-7e28981c7b26"/>
 				<textFieldExpression><![CDATA[$P{seccion}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="22" y="87" width="79" height="20" uuid="608e4d18-3fee-42ab-96fc-025646559ecf"/>
+				<reportElement x="22" y="65" width="79" height="20" uuid="608e4d18-3fee-42ab-96fc-025646559ecf"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Grado:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="101" y="87" width="112" height="20" uuid="c74029e6-c1d7-494f-9a2c-efd76cbaa7cc"/>
+				<reportElement x="101" y="65" width="112" height="20" uuid="c74029e6-c1d7-494f-9a2c-efd76cbaa7cc"/>
 				<textFieldExpression><![CDATA[$P{grado}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="101" y="66" width="268" height="20" uuid="e949bc3b-0bcf-45ed-9a62-5973ee1da7db"/>
-				<textFieldExpression><![CDATA[$P{materia}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="23" y="66" width="78" height="20" uuid="97a08945-e7a1-4cb7-bbc6-7619b8afd065"/>
-				<textElement>
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[Materia:]]></text>
-			</staticText>
 		</band>
 	</title>
 	<columnHeader>
 		<band height="21" splitType="Stretch">
 			<staticText>
-				<reportElement x="490" y="5" width="82" height="16" uuid="98b02a91-6fd2-4292-b970-710b9e603e1e"/>
+				<reportElement x="490" y="5" width="71" height="16" uuid="98b02a91-6fd2-4292-b970-710b9e603e1e"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -110,7 +99,7 @@ Reporte de Avance de Alumno]]></text>
 				<text><![CDATA[Avance %]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="5" width="101" height="16" uuid="882627b9-2f98-46e6-899e-a0205159ad27"/>
+				<reportElement x="16" y="5" width="101" height="16" uuid="882627b9-2f98-46e6-899e-a0205159ad27"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -123,7 +112,7 @@ Reporte de Avance de Alumno]]></text>
 				<text><![CDATA[Materia]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="213" y="5" width="91" height="16" uuid="1b8b91a3-d8fc-4d82-8804-42d4fd75bac4"/>
+				<reportElement x="229" y="5" width="91" height="16" uuid="1b8b91a3-d8fc-4d82-8804-42d4fd75bac4"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -136,7 +125,7 @@ Reporte de Avance de Alumno]]></text>
 				<text><![CDATA[Tipo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="101" y="5" width="112" height="16" uuid="82dc9e40-7708-4216-9b0e-417c6e0c071f"/>
+				<reportElement x="117" y="5" width="112" height="16" uuid="82dc9e40-7708-4216-9b0e-417c6e0c071f"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -149,7 +138,7 @@ Reporte de Avance de Alumno]]></text>
 				<text><![CDATA[Clase]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="304" y="5" width="93" height="16" uuid="2289429f-ccc3-423d-b16d-0d547a4788dd"/>
+				<reportElement x="320" y="5" width="77" height="16" uuid="2289429f-ccc3-423d-b16d-0d547a4788dd"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -179,7 +168,7 @@ Reporte de Avance de Alumno]]></text>
 	<detail>
 		<band height="29" splitType="Stretch">
 			<textField isBlankWhenNull="true">
-				<reportElement x="0" y="0" width="101" height="19" uuid="86df671e-2b3c-481f-81a3-19cc7bdae722"/>
+				<reportElement x="16" y="0" width="101" height="19" uuid="86df671e-2b3c-481f-81a3-19cc7bdae722"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -189,7 +178,7 @@ Reporte de Avance de Alumno]]></text>
 				<textFieldExpression><![CDATA[$F{materia}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
-				<reportElement x="213" y="0" width="91" height="19" uuid="2e5b58ec-11ed-4769-a89c-1db7b8553d42"/>
+				<reportElement x="229" y="0" width="91" height="19" uuid="2e5b58ec-11ed-4769-a89c-1db7b8553d42"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -200,7 +189,7 @@ Reporte de Avance de Alumno]]></text>
 				<textFieldExpression><![CDATA[$F{tipo}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00 %" isBlankWhenNull="true">
-				<reportElement x="490" y="0" width="82" height="19" uuid="311bb16a-3f20-4cfb-8851-ef3ec6a751d8"/>
+				<reportElement x="490" y="0" width="71" height="19" uuid="311bb16a-3f20-4cfb-8851-ef3ec6a751d8"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -211,7 +200,7 @@ Reporte de Avance de Alumno]]></text>
 				<textFieldExpression><![CDATA[$F{porcentaje}]]></textFieldExpression>
 			</textField>
 			<textField pattern="" isBlankWhenNull="true">
-				<reportElement x="304" y="0" width="93" height="19" uuid="1aa73ae9-3388-4040-9ba4-2f49d54cb956"/>
+				<reportElement x="320" y="0" width="77" height="19" uuid="1aa73ae9-3388-4040-9ba4-2f49d54cb956"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -222,7 +211,7 @@ Reporte de Avance de Alumno]]></text>
 				<textFieldExpression><![CDATA[$F{total}]]></textFieldExpression>
 			</textField>
 			<textField pattern="" isBlankWhenNull="true">
-				<reportElement mode="Transparent" x="101" y="0" width="112" height="19" forecolor="#000000" backcolor="#FFFFFF" uuid="41ec8b5b-0a04-4bc0-8357-049423460f7d"/>
+				<reportElement mode="Transparent" x="117" y="0" width="112" height="19" forecolor="#000000" backcolor="#FFFFFF" uuid="41ec8b5b-0a04-4bc0-8357-049423460f7d"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -251,11 +240,20 @@ Reporte de Avance de Alumno]]></text>
 	<summary>
 		<band height="34">
 			<textField>
-				<reportElement x="0" y="14" width="234" height="20" uuid="acdcfa32-9f0e-49ab-9f21-4cb802c38097"/>
+				<reportElement x="24" y="11" width="234" height="20" uuid="acdcfa32-9f0e-49ab-9f21-4cb802c38097"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["TOTAL DE CLASES: "+ $V{REPORT_COUNT}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="15" y="0" width="548" height="30" uuid="55281247-3c06-4112-a04e-9d0d79afac3d"/>
+				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 			</textField>
 		</band>
 	</summary>
